fixed spacing issue in text

--- a/CaptureIT/css/registerTransaction.css
+++ b/CaptureIT/css/registerTransaction.css
@@ -211,9 +211,6 @@
             }
 
 
-            .a, .c, .e, .choosedate {
-                text-align: justify;
-            }
 
             .d, .f {
                 padding-top: 23px;
